--- a/pages/pinturas.html
+++ b/pages/pinturas.html
@@ -6,27 +6,43 @@
     <title>Pintureria Propios</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
     <link rel="stylesheet" href="../css/estilo.css">
+    
 </head>
 <body>
     <header>
-        <div class = "logo-empresa">
-            <i class="icon-empresa bi bi-paint-bucket"></i>
-            <h1 class="logo"><a href="../index.html" class="format-link">PROPIOS</a></h1>
-        </div>
-        <nav class="nav">
-            <ul class="menu">
-                <li class="menu-item"><a href="#inicio" class="format-link">Pinturas</a></li>
-                <li class="menu-item"><a href="./accesorios.html" class="format-link">Accesorios</a></li>
-                <li class="menu-item"><a href="./sucursal.html" class="format-link">Sucursal</a></li>
-                <li class="menu-item"><a href="./contacto.html" class="format-link">Contacto</a></li>
-            </ul>
-        </nav>
-        <nav class="nav">
-            <ul class="menu">
-                <li class="menu-item"><a href="#inicio" class="format-link">Buscar</a></li>
-                <li class="menu-item"><a href="#inicio" class="format-link">Carrito</a></li>
-            </ul>
+        <nav class="encabezado navbar navbar-expand-md container-fluid">
+            <div class="encabezado  container-fluid">
+                <div class="nav">
+                    <a class="navbar-brand format-link" href="../index.html">
+                        <i class="icon-empresa bi bi-paint-bucket"></i>
+                        <h1 class="logo logo-tit"> PROPIOS </h1>
+
+                    </a>
+                    <button class="nav navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="cabeza collapse navbar-collapse" id="navbarSupportedContent">  
+                    <div class="nav">
+                        <ul class="menu">
+                            <li class="nav-item menu-item"><a href="#inicio" class="nav-link active format-link">Pinturas</a></li>
+                            <li class="nav-item menu-item"><a href="./accesorios.html" class="nav-link active format-link">Accesorios</a></li>
+                            <li class="nav-item menu-item"><a href="./sucursal.html" class="nav-link active format-link">Sucursal</a></li>
+                            <li class="nav-item menu-item"><a href="./contacto.html" class="nav-link active format-link">Contacto</a></li>
+                        </ul>
+                    </div>
+                    <div class="nav">
+                        <ul class="menu">
+                            <li class="nav-item menu-item"><a href="#inicio" class="nav-link active format-link">Buscar</a></li>
+                            <li class="nav-item menu-item"><a href="#inicio" class="nav-link active format-link">Carrito</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -161,5 +177,7 @@
 
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
