--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/main.css">
     
 </head>
 <body>
     <header>
         <nav class="encabezado navbar navbar-expand-md container-fluid">
-            <div class="encabezado  container-fluid">
+            <div class="encabezado_abajo  container-fluid">
                 <div class="nav">
                     <a class="navbar-brand format-link" href="#inicio">
                         <i class="icon-empresa bi bi-paint-bucket"></i>
@@ -140,14 +140,15 @@
                 <p><i class="icon-empresa"></i></p>
                 <h2 class="logo">Formas de pago</h2>
             </div>
-            <ul>
-                <li> <img src="img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></li> 
-                <li> <img src="img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></li> 
-            </ul>
+            <div>
+                <div> <img src="img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+                <div> <img src="img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+            </div>
 
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
 </body>
 </html>
