--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -9,7 +9,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../css/main.css">
     
 </head>
 <body>
@@ -63,21 +63,21 @@
                 </form>
             </div>
             <div class="formato-pin-art">
-                <div>
-                    <h2 class="h2-pin-art ciego">ACCESORIOS</h2>
+                <div class="menu-compra">
                     <h3 class="pad_button">Categorias</h3>
-                    <p>Lijas</p>
-                    <p>Pinceles</p>
-                    <p>Rodillos</p>
-                    <p>Otros</p>
+                    <form> <input name="Lijas" type="checkbox"> Lijas</form>
+                    <form> <input name="Pinceles" type="checkbox"> Pinceles</form>
+                    <form> <input name="Rodillos" type="checkbox"> Rodillos</form>
+                    <form> <input name="Rodillos" type="checkbox"> Rodillos</form>
+                    <form> <input name="Otros" type="checkbox"> Otros</form>
                     <h3 class="pad_button">Marcas</h3>
-                    <p>Greco</p>
-                    <p>Pintelux</p>
+                    <form> <input name="greco" type="checkbox"> Greco</form>
+                    <form> <input name="pintelux" type="checkbox"> Pintelux</form>
                     <h3 class="pad_button">Precio</h3>
                     <form> <input class="input-n" type="number"></form>
 
                 </div>
-                <div>
+                <div class="menu-imag">
                     <ul class="prod-ventas">
 
                         <li class="imgs-productos">
@@ -171,10 +171,10 @@
                 <p><i class="icon-empresa"></i></p>
                 <h2 class="logo">Formas de pago</h2>
             </div>
-            <ul>
-                <li> <img src="../img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></li> 
-                <li> <img src="../img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></li> 
-            </ul>
+            <div>
+                <div> <img src="../img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+                <div> <img src="../img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+            </div>
 
         </div>
     </footer>
