--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../css/main.css">
     
 </head>
 <body>
@@ -112,10 +112,10 @@
                 <p><i class="icon-empresa"></i></p>
                 <h2 class="logo">Formas de pago</h2>
             </div>
-            <ul>
-                <li> <img src="../img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></li> 
-                <li> <img src="../img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></li> 
-            </ul>
+            <div>
+                <div> <img src="../img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+                <div> <img src="../img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+            </div>
 
         </div>
     </footer>
