--- a/pages/pinturas.html
+++ b/pages/pinturas.html
@@ -9,7 +9,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../css/main.css">
     
 </head>
 <body>
@@ -63,20 +63,19 @@
                 </form>
             </div>
             <div class="formato-pin-art">
-                <div>
-                    <h2 class="h2-pin-art ciego">PINTURAS</h2>
+                <div class="menu-compra">
                     <h3 class="pad_button">Categorias</h3>
-                    <p>Al agua</p>
-                    <p>Exterior</p>
-                    <p>Pisos</p>
+                    <form> <input name="agua" type="checkbox"> Al agua</form>
+                    <form> <input name="Exterior" type="checkbox"> Exterior</form>
+                    <form> <input name="Pisos" type="checkbox"> Pisos</form>
                     <h3 class="pad_button">Marcas</h3>
-                    <p>Inca</p>
-                    <p>Pintelux</p>
+                    <form> <input name="Inca" type="checkbox"> Inca</form>
+                    <form> <input name="Pintelux" type="checkbox"> Pintelux</form>
                     <h3 class="pad_button">Precio</h3>
                     <form> <input class="input-n" type="number"></form>
 
                 </div>
-                <div>
+                <div class="menu-imag">
                     <ul class="prod-ventas">
 
                         <li class="imgs-productos">
@@ -170,10 +169,10 @@
                 <p><i class="icon-empresa"></i></p>
                 <h2 class="logo">Formas de pago</h2>
             </div>
-            <ul>
-                <li> <img src="../img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></li> 
-                <li> <img src="../img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></li> 
-            </ul>
+            <div>
+                <div> <img src="../img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+                <div> <img src="../img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+            </div>
 
         </div>
     </footer>
