--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pintureria Propios</title>
+    <title>Pintureria Propioa | Tu Destino para Colores y Arte</title>
+    <meta name="description" content="Bienvenido a Pintureria Propios - Tu tienda online de ventas de pinturas. Encuentra una amplia variedad de colores y marcas para transformar tus espacios.">
+
+    <meta name="keywords" content="pinturas, decoración, arte, colores, tienda de pinturas, arte en casa">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     
@@ -53,25 +56,25 @@
             <ul class="prod-destacados">
 
                 <li class="imgs-productos">
-                    <img src="img/cielo_raso.png" class="radio" alt="cielo raso"> 
+                    <img src="img/cielo_raso.png" class="radio" alt="pintura para cielo raso"> 
                     <p class="t-prod">CIELOS RASOS INCA - 5.0LT</p>
                     <p class="t-prod precio">$5099</p>
                 </li>
                 
                 <li class="imgs-productos">
-                    <img src="img/antioxido.png" class="radio" alt="cielo raso"> 
+                    <img src="img/antioxido.png" class="radio" alt="pintura antioxido"> 
                     <p class="t-prod">ANTIOXIDO INCA - 3.2LT</p>
                     <p class="t-prod precio">$4249</p>
                 </li>
 
                 <li class="imgs-productos">
-                    <img src="img/membrana.png" class="radio" alt="cielo raso"> 
+                    <img src="img/membrana.png" class="radio" alt="pintura impermiabilizante"> 
                     <p class="t-prod">MEMBRANA IMPERMIABILIZANTE - 4.0LT</p>
                     <p class="t-prod precio">$7200</p>
                 </li>
 
                 <li class="imgs-productos">
-                    <img src="img/pisos.png" class="radio" alt="cielo raso"> 
+                    <img src="img/pisos.png" class="radio" alt="pintura para pisos"> 
                     <p class="t-prod">PISOS - 2.5LT</p>
                     <p class="t-prod precio">$1999</p>
                 </li>
@@ -142,7 +145,7 @@
             </div>
             <div>
                 <div> <img src="img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
-                <div> <img src="img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+                <div> <img src="img/abitab_redpagos.png" alt="abitab-redpagos" class="img-pagar"></div> 
             </div>
 
         </div>
