--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pintureria Propios</title>
+    <title>Accesorios para Pintar | Herramientas para tus Proyectos</title>
+
+    <meta name="description" content="Encuentra todo lo que necesitas para tus proyectos artísticos. Explora nuestra variedad de pinceles, lienzos, paletas y más para impulsar tu creatividad.">
+
+    <meta name="keywords" content="accesorios para pintar, pinceles, lienzos, paletas, herramientas artísticas">
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     
@@ -173,7 +178,7 @@
             </div>
             <div>
                 <div> <img src="../img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
-                <div> <img src="../img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+                <div> <img src="../img/abitab_redpagos.png" alt="abitab-redpagos" class="img-pagar"></div> 
             </div>
 
         </div>
