--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pintureria Propios</title>
+    <title>Contacto | Estamos Aquí para Ayudarte</title>
+    <meta name="description" content="¡Contáctanos para cualquier pregunta o consulta!. Estamos aquí para ayudarte. Completa el formulario de contacto o encuentra nuestra información de contacto para comunicarte con nosotros.">
+
+    
+    <meta name="keywords" content="contacto, servicio al cliente, preguntas, consultas, comunicarse con nosotros, información de contacto">
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     
@@ -47,9 +52,9 @@
     </header>
 
     <main class="main">
-        <h1 class="h1-nombre">Pintureria Propios</h1>
+        <h1 class="h1-nombre transition-contacto">Pintureria Propios</h1>
         <form class="formulario">
-            <h2 class="h1-nombre">Contacto</h2>
+            <h2 class="h1-nombre transition-contacto">Contacto</h2>
 
             <div class="div-formulario">
                 <p>Nombre y apellido:</p>
@@ -114,7 +119,7 @@
             </div>
             <div>
                 <div> <img src="../img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
-                <div> <img src="../img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+                <div> <img src="../img/abitab_redpagos.png" alt="abitab-redpagos" class="img-pagar"></div> 
             </div>
 
         </div>
