arreglo de una palabra de html

--- a/pages/pinturas.html
+++ b/pages/pinturas.html
@@ -96,7 +96,7 @@
 
                         <li class="imgs-productos">
                             <img src="../img/membrana.png" class="radio" alt="pintura impermiabilizante"> 
-                            <p class="t-prod">MEMBRANA IMPERMIABILIZANTE - 4.0LT</p>
+                            <p class="t-prod">MEMBRANA IMPERMIABLE - 4.0LT</p>
                             <p class="t-prod precio">$7200</p>
                         </li>
 
@@ -120,7 +120,7 @@
 
                         <li class="imgs-productos">
                             <img src="../img/membrana.png" class="radio" alt="pintura impermiabilizante"> 
-                            <p class="t-prod">MEMBRANA IMPERMIABILIZANTE - 4.0LT</p>
+                            <p class="t-prod">MEMBRANA IMPERMIABLE - 4.0LT</p>
                             <p class="t-prod precio">$7200</p>
                         </li>
 
