--- a/pages/sucursal.html
+++ b/pages/sucursal.html
@@ -112,7 +112,7 @@
             </div>
             <div>
                 <div> <img src="../img/visa_mastercard.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
-                <div> <img src="../img/abitab_redpagos.png" alt="visa-mastercard-oca" class="img-pagar"></div> 
+                <div> <img src="../img/abitab_redpagos.png" alt="abitab-redpagos" class="img-pagar"></div> 
             </div>
 
         </div>
