--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <li class="imgs-productos">
                     <img src="img/membrana.png" class="radio" alt="pintura impermiabilizante"> 
-                    <p class="t-prod">MEMBRANA IMPERMIABILIZANTE - 4.0LT</p>
+                    <p class="t-prod">MEMBRANA IMPERMIABLE - 4.0LT</p>
                     <p class="t-prod precio">$7200</p>
                 </li>
 
