links footer, media query sucursal

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -79,7 +79,7 @@
                     <form> <input name="greco" type="checkbox"> Greco</form>
                     <form> <input name="pintelux" type="checkbox"> Pintelux</form>
                     <h3 class="pad_button">Precio</h3>
-                    <form> <input class="input-n" type="number"></form>
+                    <form> <input class="input-n" type="number" min="0"></form>
 
                 </div>
                 <div class="menu-imag">
@@ -146,9 +146,9 @@
                 <h1 class="logo">PROPIOS</h1>
             </div>
             <ul>
-                <li><i class="icon-red-social bi bi-whatsapp"> <a href="https://web.whatsapp.com/" class="format-link">Whatsapp</a></i></li>
-                <li><i class="icon-red-social bi bi-facebook"></i> <a href="https://es-la.facebook.com/" class="format-link">Facebook</a></li>
-                <li><i class="icon-red-social bi bi-instagram"></i> <a href="https://www.instagram.com/" class="format-link">Instagram</a></li>
+                <li><i class="icon-red-social bi bi-whatsapp"> <a href="https://web.whatsapp.com/" class="format-link" target="_blank">Whatsapp</a></i></li>
+                <li><i class="icon-red-social bi bi-facebook"></i> <a href="https://es-la.facebook.com/" class="format-link" target="_blank">Facebook</a></li>
+                <li><i class="icon-red-social bi bi-instagram"></i> <a href="https://www.instagram.com/" class="format-link" target="_blank">Instagram</a></li>
             </ul>
             <p class="pad_button icon-red-social"> Consultenos al 2411 1978</p>
 
