--- a/pages/sucursal.html
+++ b/pages/sucursal.html
@@ -80,9 +80,9 @@
                 <h1 class="logo">PROPIOS</h1>
             </div>
             <ul>
-                <li><i class="icon-red-social bi bi-whatsapp"> <a href="https://web.whatsapp.com/" class="format-link">Whatsapp</a></i></li>
-                <li><i class="icon-red-social bi bi-facebook"></i> <a href="https://es-la.facebook.com/" class="format-link">Facebook</a></li>
-                <li><i class="icon-red-social bi bi-instagram"></i> <a href="https://www.instagram.com/" class="format-link">Instagram</a></li>
+                <li><i class="icon-red-social bi bi-whatsapp"> <a href="https://web.whatsapp.com/" class="format-link" target="_blank">Whatsapp</a></i></li>
+                <li><i class="icon-red-social bi bi-facebook"></i> <a href="https://es-la.facebook.com/" class="format-link" target="_blank">Facebook</a></li>
+                <li><i class="icon-red-social bi bi-instagram"></i> <a href="https://www.instagram.com/" class="format-link" target="_blank">Instagram</a></li>
             </ul>
             <p class="pad_button icon-red-social"> Consultenos al 2411 1978</p>
 
