--- a/pages/sucursal.html
+++ b/pages/sucursal.html
@@ -19,6 +19,10 @@
     
 </head>
 <body>
+
+    <!-- lo pongo aca porque abajo se rompe por google maps--> 
+    <script src="../js/sucursal.js"></script>
+
     <header>
         <nav class="encabezado navbar navbar-expand-md container-fluid">
             <div class="encabezado  container-fluid">
@@ -119,5 +123,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
