--- a/pages/pinturas.html
+++ b/pages/pinturas.html
@@ -42,7 +42,7 @@
                     <div class="nav">
                         <ul class="menu">
                             <li class="nav-item menu-item"><a href="#inicio" class="nav-link active format-link">Buscar</a></li>
-                            <li class="nav-item menu-item"><a href="#inicio" class="nav-link active format-link">Carrito</a></li>
+                            <li class="nav-item menu-item"><a href="./carrito.html" class="nav-link active format-link">Carrito</a></li>
                         </ul>
                     </div>
                 </div>
@@ -148,14 +148,14 @@
                         <h4 class="h1-nombre">El carrito se encuentra Vacio</h4>
                     </div>
                     <div class="carrito-productos" id="carrito-productos">
-                        <!-- Esto se rellena en JS -->
+                        
                     </div>
                     <div class="carrito-total">
                         <h2 class="h1-nombre">Total: <span id="carrito-total">$0</span></h2>
                     </div>
                     <button id="vaciar" class="input">Vaciar carrito</button>
                 </div>
-            </div>
+            </div> 
         </div>
     </main>
 
